12.6
-----

12.5
-----
* Fixed Notices sometimes showing behind the keyboard
* Implemented Domain Credit feature
* Implemented auto saving a post on preview  
* The app now launches a bit more quickly.
* Fixed broken images in posts created by the share extension.

12.4
-----
* You can now mark notifications as unread with just a swipe.
* Fixed crash when searching Free Photo Library.
* Better URL validation when logging in with a self hosted site.
* Account Settings Primary Site now shows the site URL if the site has no name.
* Implemented incremental improvements to accessibility experience across the app.
* Updated error message when tag loading failed.

12.3
-----
* Images are now imported from TextBundle and TextPack files shared from other apps
* Added support for importing Markdown files shared from other apps
* Resolved a crash that might occur during the new Site Creation flow.
* Improved connectivity errors messaging in sharing screen.
* Quotes in Reader are now easier to read, thanks to a vertical bar on the left making them more visually distinct
* Fixed an issue where some text in Activity Log would show up in a wrong language
* Jetpack Remote Install: enabled the native feature to install and activate Jetpack on a self-hosted site

12.2
-----
* Draft preview now shows the remote version of the post.
* Initial support for importing TextBundle and TextPack from other apps.
* Support for lists in Gutenberg posts.
* Several UI details were polished in the Site Creation flow.

12.1
-----
* Improve messages when updates to user account details fail because of server logic, for exanple email being used for another account.
* Improved text import from other apps, such as Bear or Ulysses 🥰
* Added support on the editor for video elements that use the source elements. For example:
```<video alt="Another video with bunnies">
<source src="https://videos.files.wordpress.com/kUJmAcSf/bbb_sunflower_1080p_30fps_normal.mp4" type="video/mp4">
</video>```